--- a/mdp_examples.ipynb
+++ b/mdp_examples.ipynb
@@ -4,21 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Agent models and decision processes: key concepts with examples - reinforcement and imitation learning"
+    "# Agent models and decision processes: key concepts with examples - reinforcement and imitation learning"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the field of artificial intelligence, when one wishes to create a system that observes the environment and performs some kind of action in response, one generally thinks of this as a **decision process**. This is of particular interest to researchers seeking to employ machine learning methods in robotics. When reading discourse surrounding this broad topic, it is quite common to come across terms such as \"agents\", \"policies\", \"states\", \"actions\", \"reinforcement learning\", \"reward functions\" and so forth. This notebook is intended to serve as a gentle introduction to these concepts and the more common theoretical frameworks associated with them. It also includes some simple worked examples of learning a policy for balancing a pole on a cart using reinforcement and imitation learning"
+    "In the field of artificial intelligence, when one wishes to create a system that observes the environment and performs some kind of action in response, one generally thinks of this as a **decision process**. This is of particular interest to researchers seeking to employ machine learning methods in robotics. When reading discourse surrounding this broad topic, it is quite common to come across terms such as \"agents\", \"policies\", \"states\", \"actions\", \"reinforcement learning\", \"reward functions\" and so forth. This notebook is intended to serve as a gentle introduction to these concepts and the more common theoretical frameworks associated with them. It also includes some simple worked examples of learning a policy for balancing a pole on a cart using reinforcement and imitation learning.\n",
+    "\n",
+    "Bear in mind that is an extremely brief introduction to a *huge* field of active research, so there are many things not covered here, even basic ones."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Overview"
+    "## Overview"
    ]
   },
   {
@@ -43,7 +45,7 @@
     "The primary question the fields of **reinforcement and imitation learning** seek to answer is thus: *given a Markov Decision Process, what is the most effective way of discovering a policy function?* Both are discussed in more detail below, but the long and short of it is:\n",
     "\n",
     "- In **reinforcement learning** we give our agent a random starting policy (typically in the form of some model template, an object which can approximate a wide range of possible functions -- such as a neural network) and let it loose upon the environment. This way we collect rewards which tell us how well we did. Using the rewards, we update the policy, then try again. Repeat until a useful agent pops out. The biggest advantage of this approach is that we don't have to know anything about how to actually achieve the goal, nor do we need a system that can. In theory, we only need to be able to define the reward function. In practice, however, there are several important drawbacks. First of all, this method is computationally extremely expensive, since the only way to learn is through interaction with the (typically simulated) environment. Secondly, many problems have extremely sparse rewards (meaning we can go a long time before seeing how well we did), which results in astronomically huge search spaces that agents have to explore before getting any useful feedback. Thus, the approach of\n",
-    "- **imtation learning** takes example state-action pairs produced by an **expert** and trains a policy that can reproduce these accurately. Obviously, this only works if we have an expert (such as a human demonstrator) to begin with. But provided we do, this lets us skip the incredibly expensive exploration phase of the process and skip straight to learning. Furthermore, a policy obtained from a not very good expert can then be improved through reinforcement learning, and lots of research in the field is about precisely this -- using imitation learning to \"kickstart\" a reinforcement learning process.\n",
+    "- **imtation learning** takes example state-action pairs produced by an **expert** and trains a policy that can reproduce these accurately. Obviously, this only works if we have an expert (such as a human demonstrator) to begin with. But provided we do, this lets us skip the incredibly expensive exploration phase of the process and go straight to learning. Furthermore, a policy obtained from a not very good expert can then be improved through reinforcement learning, and lots of research in the field is about precisely this -- using imitation learning to \"kickstart\" a reinforcement learning process.\n",
     "\n",
     "So far, we've only discussed cases when the full state of the system is known and it follows the Markov Decision Process formalism. Things get somewhat murkier once we start dealing with incomplete observations -- it is possible that some hidden variables are not apparent from any given observation but can in fact be inferred from longer state histories. This is particularly often the case when dealing with agents which will have to operate in real rather than simulated environments -- such as robot controllers. Therefore the most recent state-of-the-art research, particularly regarding imitation learning, has been quite heavily slanted towards using sequence prediction models (such as transformer neural networks) which also keep track of past states, moving us away from the world of MDPs. However, in many cases methods grounded in the MDP are perfectly sufficient and those are the only ones used in examples below."
    ]
@@ -52,7 +54,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reinforcement learning"
+    "## The task - CartPole"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The task used in all the examples below is a classic control problem called the **inverse pendulum**. Basically, you've got a stick on a cart. The stick is free to rotate, the cart is free to move left and right. The agent's got to keep the stick upright by sliding the cart underneath. If the stick goes below a certain angle, or the cart slides out of the picture, game over. For every timestep that the agent manages to survive it gets a $+1$ reward. This is great introductory illustration of various control-related concepts. In our case, we're using the *OpenAI gym* package to provide us with a ready-made simulation environment that accepts actions as inputs and outputs states at every timestep. Each action is a number -- either 0 or 1 -- that tells the cart to move left or right. Each state is a vector $ (x, v, \\theta, \\omega) $ where $x$ -- current position, $v$ -- current velocity, $\\theta$ -- angle of the stick, $\\omega$ -- rotational velocity of the stick. Visualization is handled by the *gym* package. All that's left for us to do is to write our own agent.\n",
+    "\n",
+    "To get a picture of what this looks like with an untrained agent, below is an agent using the tried and true \"take a random action every time\" approach to success. *visualize_model* is a utility function that wraps the simulation environment for us, defined in *utils.py* in this repository."
    ]
   },
   {
@@ -61,10 +72,172 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from QMatrix import QMatrix, INNAME\n",
+    "import numpy as np\n",
     "from utils import visualize_model\n",
     "\n",
-    "qmat = QMatrix.load(f\"{INNAME}.pickle\")\n",
+    "class RandomAgent():\n",
+    "    \n",
+    "    def get_action(self, _):\n",
+    "        return np.random.randint(0,2)\n",
+    "\n",
+    "model = RandomAgent()\n",
+    "visualize_model(model, notebook=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reinforcement learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In reinforcement learning, the agent takes actions in its environment, collects a reward at every state it visits and uses this reward signal to optimize its policy. Simple enough to state, but an enormously broad problem in reality. A wide variety of different approaches have been studied, and it's hard to even begin trying to categorize them. But perhaps the most straightforward divide is that between value function and policy optimization methods.\n",
+    "\n",
+    "**Policy optimization** methods optimize the policy directly. There are many ways to do this, but in principle the pattern is as follows: the policy is a model template (such as a neural network); this is used to collect reward information; the model is updated directly to take actions which result in greater reward. These methods typically struggle with noisy reward signals.\n",
+    "\n",
+    "**Value function** methods try to estimate the value -- time-discounted sum of all future rewards -- of any given state, and use this estimate to select an action with the greatest expected return. The main reason to do things this way is that it lets us \"average out\" the noise in observed rewards. The Q-learning example below is a value function method.\n",
+    "\n",
+    "In practice, combined methods also exist. The advantage actor-critic example below is a combined method, where an estimate of the value function is optimized alongside the policy to help stabilize and guide the optimization process."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q-learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a classic value function estimation method, in use since the 1980s. In its most basic form, we keep a tensor (many-dimensional equivalent to a matrix or vector) $ Q $ with $ q_{s,a} \\in Q $ corresponding to the expected value \n",
+    "\n",
+    "$$ \\mathbb{E}\\left[ R(T(s_t, a)) + \\sum_{\\tau={t+1}}^{\\inf} \\gamma^{\\tau-t} R(s_{\\tau}) \\right]: s_{\\tau} = T(s_{\\tau-1}, \\max_a \\lbrace q_{s_{\\tau-1},a} \\rbrace) $$\n",
+    "\n",
+    "Now, this equation may seem like quite the handful at first, and it's recursive to boot. Essentially, every cell contains the esimate of what we'd get if at state $s_t$ we took action $a$, but thereafter kept picking the action based on what we expect the maximum reward to be. The $ \\gamma $ term is the **discount factor**, some number between 0 and 1 that lets us weigh rewards far in the future as less important than ones closer in time.\n",
+    "\n",
+    "Of course, this assumes that we already have the Q-matrix filled out with all the values, which is a sort of chicken-and-egg problem. Thankfully, it's been proven that this kind of time-discounted value matrix will converge if we simply collect rewards and update the values at every time step. Specifically, the update rule used in the script is\n",
+    "\n",
+    "$$ q_{s_t,a}^{i+1} = (1-\\alpha)q_{s_t,a}^i + \\alpha \\sum_{\\tau=t}^{t_{\\max}}\\gamma^{\\tau-t} R(s_{\\tau}) $$\n",
+    "\n",
+    "$ s_t \\in (s_1, s_2, ..., s_{t_{\\max}}) $ is a state recorded in the training episode of length $t_{\\max}$, $i$ is the current training iteration, $\\alpha$ is a coefficient that determines how much we update the matrix with every training iteration. There is one major catch with using this method for the cartpole task -- the Q-matrix requires that our state values be discrete, or else the matrix would have to be infinitely large. Therefore, a large part of the implementation code is concerned with mapping the continuous position, angle and velocity observations to discrete values which can be used to index an array. A resolution has been picked arbitrarily to find a good compromise between performance and having a model that actually learns the task. The implementation code can be found in *QMatrix.py*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To train the model, we first define a convenience function to update the learning rate with every training iteration. When starting out we can afford to make large updates, but as training progresses we don't want to keep throwing our model off an altering the induced state distribution (states actually visited by the agent when following a policy) too much."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def rate_schedule(ep, decay, min_rate = 0.01, initial = 1.0):\n",
+    "    return max( min_rate, min( initial, math.exp(-decay*ep) ) )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The actual training loop is rather simple compared to more sophisticated models. At the end of our process, we can choose to save our model to a file by simply pickling the QMatrix object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def train_matrix(model, env, save=True):\n",
+    "\n",
+    "    for episode in range(4000):\n",
+    "\n",
+    "        lr = rate_schedule(episode, 0.001)\n",
+    "        exploration_rate = rate_schedule(episode, 0.001)\n",
+    "        discount = 0.98\n",
+    "\n",
+    "        done = False\n",
+    "        state_new, _ = env.reset()\n",
+    "        timestep = 0\n",
+    "        \n",
+    "        while not done and timestep < 2000:\n",
+    "\n",
+    "            timestep += 1\n",
+    "            state_old = state_new\n",
+    "            action, _ = model.randomized_action(env.action_space, state_old, exploration_rate)\n",
+    "\n",
+    "            state_new, reward, done, _, __ = env.step(action)\n",
+    "            expected_reward = reward + model.expected_next_reward(state_new, discount)\n",
+    "            model.update_reward(expected_reward, state_old, action, lr)\n",
+    "\n",
+    "        if episode % 50 == 0:\n",
+    "            print(f\"Training episode {episode} survived for {timestep} steps\")     \n",
+    "    if save:\n",
+    "        model.save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To call the training loop we need to instantiate the matrix and environment:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from QMatrix import QMatrix\n",
+    "import gym\n",
+    "\n",
+    "env = gym.make(\"CartPole-v1\")\n",
+    "\n",
+    "QSHAPE=(4,8,4,8) # how many discrete steps we split each continuous axis into\n",
+    "LIMITS=(\n",
+    "    (env.observation_space.low[0], env.observation_space.high[0]),\n",
+    "    (-10,10),\n",
+    "    (env.observation_space.low[2], env.observation_space.high[2]),\n",
+    "    (-5,5),\n",
+    ")\n",
+    "qmat = QMatrix(LIMITS, QSHAPE, env.action_space.n)\n",
+    "\n",
+    "train_matrix(qmat, env, save=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After training (or if we choose to use a pre-trained model) we can load it from file and run it in the environment:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from QMatrix import QMatrix\n",
+    "from utils import visualize_model\n",
+    "\n",
+    "INNAME=\"qmatrix_models/QMatrix.pickle\"\n",
+    "\n",
+    "qmat = QMatrix.load(INNAME)\n",
     "visualize_model(qmat, notebook=True)"
    ]
   },
@@ -72,7 +245,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Imitation learning"
+    "### Advantage Actor-Critic Neural Network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imitation learning"
    ]
   },
   {
@@ -90,7 +275,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -106,6 +291,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "2f2a7023551a37a849cc6a70933cf64f7d1311b89ef103a770f61e685c6cfb90"
