--- a/mdp_examples.ipynb
+++ b/mdp_examples.ipynb
@@ -245,13 +245,125 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As can be seen, the Q-matrix method is entirely sufficient for tasks with small state and action spaces like this, but in practice most problems will entail impossibly large matrices. That's why outside of toy examples there is very little use for this method, and more sophisticated approaches are required."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Advantage Actor-Critic Neural Network"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The advantage actor-critic method is a newer approach to reinforcement learning which utilizes a combination of value estimation and direct policy optimization.\n",
+    "\n",
+    "In our case, a single neural network $\\pi$ with parameters $\\theta$ learns to predict an estimate of the value at the current state (similar to the value in the Q-matrix) as well as a set of action probabilities; more formally, \n",
+    "\n",
+    "$$ \\pi_{\\theta}(s_t) = \\left( V_{\\psi}(s_t), P_{\\phi}(A) \\right): \\psi, \\phi \\subset \\theta $$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "The part of the model's output responsible for predicting the value is called the **critic** while the one giving us the action probabilities is called the **actor**. Just like before, during each training episode a sequence of states is recorded and the sum of future rewards is computed for each. This then gets used in the critic loss\n",
+    "\n",
+    "$$ R_{observed}(s_t) = \\sum_{\\tau=t}^{t_{\\max}}\\gamma^{\\tau-t} R(s_{\\tau}) $$\n",
+    "\n",
+    "$$ \\mathcal{L}_{critic}\\left( V_{\\psi}(s_t), R_{observed}(s_t) \\right) =\n",
+    " \\mathcal{L}_{crossentropy}\\left( V_{\\psi}(s_t),  R_{observed}(s_t) \\right) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This way, the critic learns to associate every state with a discounted future reward -- the value function part of this approach. The agent gets optimized using the actual reward $R_{observed}(s_t)$ and the critic's estimate of the value $V_{\\psi}(s_t)$ to produce a term called **advantage** $ Adv(s_t) = R_{observed}(s_t) - V_{\\psi}(s_t)$. The loss is then defined as \n",
+    "\n",
+    "$$ \\mathcal{L}_{actor} = -\\sum_{t=1}^{t_{\\max}} Adv(s_t) \\log\\left[P_{\\phi}(A \\vert s_t) \\right]  $$\n",
+    "\n",
+    "The logarithmic probabilities $\\log \\left[P_{\\phi}(A \\vert s_t) \\right] $ of the model  are flipped from negative to positive. Thus high probabilities are close to zero while low ones tend towards infinity). \n",
+    " The upshot of this is that\n",
+    "\n",
+    "- when the model does much better than expected, adjusting the probability upward is given greater weight;\n",
+    "- when the model does much worse than expected, adjusting the probability downward is given greater weight;\n",
+    "- outputs which trend towards the expected value of the state are left alone as their weights approach 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The implementation code for this model can be found in *ActorCritic.py*. Specifically, we're using PyTorch to implement a deep neural network with one hidden layer, 128 hidden features and ReLU activation by default. This then feeds into a 2-feature action output (corresponding to *move left* and *move right*), and a single feature value output. The code for interfacing with the simulation environment is contained in the class itself, which is quite verbose and won't be considered in this notebook. Training can be invoked by"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch.optim import Adam\n",
+    "from ActorCritic import ActorCriticModel, SEED, ENV\n",
+    "\n",
+    "OUTNAME=\"actor_critic_models/ActorCritic_adam\"\n",
+    "\n",
+    "def train_model(outname=OUTNAME):\n",
+    "\n",
+    "    env = gym.make(ENV)\n",
+    "    env.reset(seed=SEED)\n",
+    "\n",
+    "    dev = torch.device('cpu')\n",
+    "    model = ActorCriticModel(\n",
+    "        env.observation_space.shape[0],\n",
+    "        env.action_space.n,\n",
+    "        device=dev\n",
+    "    )\n",
+    "    model.train()\n",
+    "\n",
+    "    opt = Adam(model.parameters(), lr=3e-2)\n",
+    "\n",
+    "    for ep in range(1000):\n",
+    "        model.train_episode(env, opt, ep)\n",
+    "        if ep % 100 == 0:\n",
+    "            print(f\"Saving model at epoch {ep}...\")\n",
+    "            torch.save(model.state_dict(), f\"{outname}_ep{ep}.pth\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "while previously trained models can be loaded and visualized with"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from utils import visualize_model\n",
+    "\n",
+    "INNAME=\"actor_critic_models/ActorCritic_adam_ep600.pth\"\n",
+    "\n",
+    "def evaluate_model(inname=INNAME):\n",
+    "\n",
+    "    dev = torch.device('cpu')\n",
+    "    model = ActorCriticModel(device=dev)\n",
+    "    model.eval()\n",
+    "    model.load_state_dict(torch.load(inname))\n",
+    "    \n",
+    "    visualize_model(model)"
+   ]
   },
   {
    "cell_type": "markdown",
