--- a/mdp_examples.ipynb
+++ b/mdp_examples.ipynb
@@ -272,12 +272,12 @@
    "source": [
     "\n",
     "\n",
-    "The part of the model's output responsible for predicting the value is called the **critic** while the one giving us the action probabilities is called the **actor**. Just like before, during each training episode a sequence of states is recorded and the sum of future rewards is computed for each. This then gets used in the critic loss\n",
+    "The part of the model's output responsible for predicting the value is called the **critic** while the one giving us the action probabilities is called the **actor**. Just like before, during each training episode a sequence of states is recorded and the sum of future rewards is computed for each. This then gets used in the critic loss, which can be any general purpose loss function used in regression tasks\n",
     "\n",
     "$$ R_{observed}(s_t) = \\sum_{\\tau=t}^{t_{\\max}}\\gamma^{\\tau-t} R(s_{\\tau}) $$\n",
     "\n",
     "$$ \\mathcal{L}_{critic}\\left( V_{\\psi}(s_t), R_{observed}(s_t) \\right) =\n",
-    " \\mathcal{L}_{crossentropy}\\left( V_{\\psi}(s_t),  R_{observed}(s_t) \\right) $$"
+    " \\mathcal{L}_{smoothL1loss}\\left( V_{\\psi}(s_t),  R_{observed}(s_t) \\right) $$"
    ]
   },
   {
@@ -373,16 +373,216 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In imitation learning, datasets consisting called \"demonstrations\" are collected by an agent already capable of accomplishing the task, called an \"expert\". Again, as with reinforcement learning, multiple broad approaches exist, and finding ways to enumerate them all is beyond the scope of this notebook. Perhaps the most useful distinction is between\n",
+    "\n",
+    "- **behavioral cloning** -- demonstrations consist of simple state action pairs $(s_t, a_t)$. The policy $\\pi_{\\theta}(s_t)$ simply learns to approximate $a_t$ either as a classification (for discrete action spaces) or regression (for continuous ones) task. This is the simplest approach, but it struggles with so-called **distribution shift** - a divergence between states reached by the expert and those the cloned policy finds itself reaching, caused by compounding errors. Various mitigations have been studied, such as sampling the agent during training (if one is available), but in general this is a hard problem to overcome;\n",
+    "- **inverse reinforcement learning** -- first, an attempt is made to discover a reward function that could have produced the observed distribution of state-action pairs. Then reinforcement learning is used to optimize a policy for this reconstructed reward function. More advanced approaches try to sample the entire class of possible reward functions through generative-adversarial training methods.\n",
+    "- **time series behavioral cloning** -- the MDP formalism is discarded and longer sequences of past states are used to train general-purpose sequence predictors such as transformer or recurrent neural networks."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Behavioral cloning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, a neural network of the same architecture as the one used for the actor-critic is instead trained on demonstrations collected by either one of the previously trained agents. A simple categorical cross entropy loss function is used to train the model to predict the correct action corresponding to each state as in a typical classification task\n",
+    "\n",
+    "$$ \\mathcal{L}_{clone} (\\pi_{\\theta}(s_t), a_t) = \\mathcal{L}_{crossentropy}(\\pi_{\\theta}(s_t), a_t)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The implementation can be found in *BehavioralClone.py*. For training, first it is necessary to collect demonstration data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from os.path import exists\n",
+    "from BehavioralClone import StateActionDataset\n",
+    "\n",
+    "PROB_RANDOM=0.01\n",
+    "\n",
+    "def collect_episode(env, model, exploration_rate=PROB_RANDOM):\n",
+    "\n",
+    "    states = []\n",
+    "    actions = []\n",
+    "\n",
+    "    state, _ = env.reset()\n",
+    "    done = False\n",
+    "    steps = 0\n",
+    "\n",
+    "    while not done and steps < 1000:\n",
+    "        steps += 1\n",
+    "        action, was_random = model.randomized_action(env.action_space, torch.tensor(state), exploration_rate)\n",
+    "        if not was_random:\n",
+    "            states.append(state)\n",
+    "            actions.append(action)\n",
+    "        state, _, done, __, ___ = env.step(action)\n",
+    "    \n",
+    "    return torch.tensor(np.array(states)), torch.tensor(actions)\n",
+    "\n",
+    "\n",
+    "def collect_dataset(env, model, eps, name):\n",
+    "\n",
+    "    if exists(name):\n",
+    "        print(f\"Loading dataset from file {name}\")\n",
+    "        return StateActionDataset.load_from_file(name)\n",
+    "\n",
+    "    print(f\"Collecting new dataset for {name}\")\n",
+    "\n",
+    "    state_list = []\n",
+    "    action_list = []\n",
+    "\n",
+    "    for ep in range(eps):\n",
+    "        states, actions = collect_episode(env, model)\n",
+    "        state_list.append(states)\n",
+    "        action_list.append(actions)\n",
+    "\n",
+    "        if ep % 50 == 0:\n",
+    "            print(f\"Processed episode {ep} of {eps}\")\n",
+    "    \n",
+    "    state_tensor = torch.concat(state_list)\n",
+    "    action_tensor = torch.concat(action_list)\n",
+    "    \n",
+    "    ds = StateActionDataset(state_tensor, action_tensor)\n",
+    "    print(f\"Saving dataset to {name}\")\n",
+    "    ds.save_to_file(name)\n",
+    "\n",
+    "    return ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the dataset creation implemented, the rest is straightforward classificator training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import DataLoader\n",
+    "from torch.optim.lr_scheduler import MultiStepLR\n",
+    "from BehavioralClone import BehavioralClone, EPS_COLLECT_TRAIN, EPS_COLLECT_TEST, TRAIN_DATASET_FNAME, TEST_DATASET_FNAME, TRAIN_EPOCHS\n",
+    "\n",
+    "def test_model(model, dataloader, device):\n",
+    "\n",
+    "    correct_sum = torch.tensor(0).to(device)\n",
+    "    total_length = 0\n",
+    "\n",
+    "    for state_batch, action_batch in dataloader:\n",
+    "        infer_batch = model.forward(state_batch)\n",
+    "        correct_sum += torch.where(infer_batch.argmax(dim=-1) == action_batch.to(device), 1, 0).sum()\n",
+    "        total_length += len(infer_batch)\n",
+    "    \n",
+    "    return (correct_sum / total_length).item()\n",
+    "\n",
+    "def clone_agent(env, expert):\n",
+    "\n",
+    "    train_ds = collect_dataset(env, expert, EPS_COLLECT_TRAIN, TRAIN_DATASET_FNAME)\n",
+    "    test_ds = collect_dataset(env, expert, EPS_COLLECT_TEST, TEST_DATASET_FNAME)\n",
+    "\n",
+    "    train_dl = DataLoader(train_ds, batch_size=2048, shuffle=True)\n",
+    "    test_dl = DataLoader(test_ds, batch_size=64, shuffle=True)\n",
+    "\n",
+    "    cpu = torch.device('cpu')\n",
+    "    device = torch.device('cuda') if torch.cuda.is_available() else cpu\n",
+    "    model = BehavioralClone(device, env.observation_space.shape[0], env.action_space.n)\n",
+    "    model.train()\n",
+    "\n",
+    "    opt = Adam(model.parameters(), lr=1e-2)\n",
+    "    scd = MultiStepLR(opt, [1,2,5,10])\n",
+    "    losses = []\n",
+    "    for epoch in range(TRAIN_EPOCHS):\n",
+    "        print(f\"\\n\\nStarting epoch {epoch} with lr {scd.get_last_lr()}\")\n",
+    "\n",
+    "        for i, (state_batch, action_batch) in enumerate(train_dl):\n",
+    "            infer_batch = model.forward(state_batch)\n",
+    "            loss = tf.cross_entropy(infer_batch, action_batch.to(device), reduction='sum')\n",
+    "            opt.zero_grad()\n",
+    "            loss.backward()\n",
+    "            opt.step()\n",
+    "\n",
+    "            losses.append(loss)\n",
+    "            if i != 0 and i % 2000 == 0:\n",
+    "                print(f\"Batch {i} mean loss {torch.stack(losses).mean()}\")\n",
+    "                losses = []\n",
+    "        scd.step()\n",
+    "        correct_percent_train = test_model(model, train_dl, device) * 100\n",
+    "        correct_percent = test_model(model, test_dl, device) * 100\n",
+    "        print(f\"Epoch {epoch} test accuracy {correct_percent}% train accuracy {correct_percent_train}%\")\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To create the datasets and clone an agent, run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gym\n",
+    "\n",
+    "OUTNAME_BASE=f\"bc_models/BehavioralClone_ds_{EPS_COLLECT_TRAIN}-{PROB_RANDOM}_epochs_{TRAIN_EPOCHS}_layers_\"\n",
+    "env = gym.make(ENV)\n",
+    "\n",
+    "expert = ActorCriticModel(env.observation_space.shape[0], env.action_space.n)\n",
+    "expert.load_state_dict(torch.load(INNAME))\n",
+    "\n",
+    "cloned_model = clone_agent(env, expert)\n",
+    "\n",
+    "torch.save(cloned_model.state_dict(), f\"{OUTNAME_BASE}{cloned_model.name_modifier}.pth\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To evaluate a trained model, run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import visualize_model\n",
+    "\n",
+    "EVAL_NAME=\"bc_models/BehavioralClone_4-128-2.pth\"\n",
+    "\n",
+    "cloned_model = BehavioralClone(torch.device('cuda'))\n",
+    "cloned_model.load_state_dict(torch.load(f\"{EVAL_NAME}\"))\n",
+    "cloned_model.eval()\n",
+    "\n",
+    "visualize_model(cloned_model)"
+   ]
   }
  ],
  "metadata": {
