change output filenames

--- a/mdp_examples.ipynb
+++ b/mdp_examples.ipynb
@@ -313,7 +313,7 @@
     "from torch.optim import Adam\n",
     "from ActorCritic import ActorCriticModel, SEED, ENV\n",
     "\n",
-    "OUTNAME=\"actor_critic_models/ActorCritic_adam\"\n",
+    "OUTNAME=\"actor_critic_models/ActorCritic_adam_notebook\"\n",
     "\n",
     "def train_model(outname=OUTNAME):\n",
     "\n",
@@ -480,6 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch.nn.functional as tf\n",
     "from torch.utils.data import DataLoader\n",
     "from torch.optim.lr_scheduler import MultiStepLR\n",
     "from BehavioralClone import BehavioralClone, EPS_COLLECT_TRAIN, EPS_COLLECT_TEST, TRAIN_DATASET_FNAME, TEST_DATASET_FNAME, TRAIN_EPOCHS\n",
@@ -549,7 +550,7 @@
    "source": [
     "import gym\n",
     "\n",
-    "OUTNAME_BASE=f\"bc_models/BehavioralClone_ds_{EPS_COLLECT_TRAIN}-{PROB_RANDOM}_epochs_{TRAIN_EPOCHS}_layers_\"\n",
+    "OUTNAME_BASE=f\"bc_models/BehavioralClone_notebook_ds_{EPS_COLLECT_TRAIN}-{PROB_RANDOM}_epochs_{TRAIN_EPOCHS}_layers_\"\n",
     "env = gym.make(ENV)\n",
     "\n",
     "expert = ActorCriticModel(env.observation_space.shape[0], env.action_space.n)\n",
