--- a/mdp_examples.ipynb
+++ b/mdp_examples.ipynb
@@ -310,12 +310,13 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "import gym\n",
     "from torch.optim import Adam\n",
     "from ActorCritic import ActorCriticModel, SEED, ENV\n",
     "\n",
     "OUTNAME=\"actor_critic_models/ActorCritic_adam_notebook\"\n",
     "\n",
-    "def train_model(outname=OUTNAME):\n",
+    "def train_model(outname=OUTNAME, episodes=1000):\n",
     "\n",
     "    env = gym.make(ENV)\n",
     "    env.reset(seed=SEED)\n",
@@ -330,11 +331,13 @@
     "\n",
     "    opt = Adam(model.parameters(), lr=3e-2)\n",
     "\n",
-    "    for ep in range(1000):\n",
+    "    for ep in range(episodes):\n",
     "        model.train_episode(env, opt, ep)\n",
-    "        if ep % 100 == 0:\n",
+    "        if ep % 100 == 0 or ep == episodes - 1:\n",
     "            print(f\"Saving model at epoch {ep}...\")\n",
-    "            torch.save(model.state_dict(), f\"{outname}_ep{ep}.pth\")\n"
+    "            torch.save(model.state_dict(), f\"{outname}_ep{ep}.pth\")\n",
+    "\n",
+    "train_model(episodes=600)"
    ]
   },
   {
@@ -351,6 +354,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "from ActorCritic import ActorCriticModel\n",
     "from utils import visualize_model\n",
     "\n",
     "INNAME=\"actor_critic_models/ActorCritic_adam_ep600.pth\"\n",
@@ -362,7 +366,9 @@
     "    model.eval()\n",
     "    model.load_state_dict(torch.load(inname))\n",
     "    \n",
-    "    visualize_model(model)"
+    "    visualize_model(model, notebook=True)\n",
+    "\n",
+    "evaluate_model()"
    ]
   },
   {
@@ -408,11 +414,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
+    "import numpy as np\n",
     "from os.path import exists\n",
     "from BehavioralClone import StateActionDataset\n",
     "\n",
@@ -549,9 +556,11 @@
    "outputs": [],
    "source": [
     "import gym\n",
+    "import torch\n",
+    "from ActorCritic import ActorCriticModel, INNAME\n",
     "\n",
     "OUTNAME_BASE=f\"bc_models/BehavioralClone_notebook_ds_{EPS_COLLECT_TRAIN}-{PROB_RANDOM}_epochs_{TRAIN_EPOCHS}_layers_\"\n",
-    "env = gym.make(ENV)\n",
+    "env = gym.make(\"CartPole-v1\")\n",
     "\n",
     "expert = ActorCriticModel(env.observation_space.shape[0], env.action_space.n)\n",
     "expert.load_state_dict(torch.load(INNAME))\n",
@@ -574,6 +583,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
+    "from BehavioralClone import BehavioralClone\n",
     "from utils import visualize_model\n",
     "\n",
     "EVAL_NAME=\"bc_models/BehavioralClone_4-128-2.pth\"\n",
@@ -582,7 +593,7 @@
     "cloned_model.load_state_dict(torch.load(f\"{EVAL_NAME}\"))\n",
     "cloned_model.eval()\n",
     "\n",
-    "visualize_model(cloned_model)"
+    "visualize_model(cloned_model, notebook=True)"
    ]
   }
  ],
