--- a/mdp_examples.ipynb
+++ b/mdp_examples.ipynb
@@ -488,6 +488,7 @@
    "outputs": [],
    "source": [
     "import torch.nn.functional as tf\n",
+    "from torch.optim import Adam\n",
     "from torch.utils.data import DataLoader\n",
     "from torch.optim.lr_scheduler import MultiStepLR\n",
     "from BehavioralClone import BehavioralClone, EPS_COLLECT_TRAIN, EPS_COLLECT_TEST, TRAIN_DATASET_FNAME, TEST_DATASET_FNAME, TRAIN_EPOCHS\n",
