--- a/mdp_examples.ipynb
+++ b/mdp_examples.ipynb
@@ -314,7 +314,9 @@
     "from torch.optim import Adam\n",
     "from ActorCritic import ActorCriticModel, SEED, ENV\n",
     "\n",
+    "SEED=3\n",
     "OUTNAME=\"actor_critic_models/ActorCritic_adam_notebook\"\n",
+    "torch.manual_seed(SEED)\n",
     "\n",
     "def train_model(outname=OUTNAME, episodes=1000):\n",
     "\n",
@@ -337,7 +339,7 @@
     "            print(f\"Saving model at epoch {ep}...\")\n",
     "            torch.save(model.state_dict(), f\"{outname}_ep{ep}.pth\")\n",
     "\n",
-    "train_model(episodes=600)"
+    "train_model(episodes=2000)"
    ]
   },
   {
@@ -600,7 +602,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('.venv': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -616,7 +618,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "2f2a7023551a37a849cc6a70933cf64f7d1311b89ef103a770f61e685c6cfb90"
